[package]
name = "loom"
version = "0.1.0"
authors = ["Jacob Ochoa <jacob.ochoa@gmail.com>"]
edition = "2018"

[dependencies]
#postgres = "0.17.5"
#postgres-openssl = "0.3.0"
tokio-postgres = {version = "0.5.5", features = ["with-uuid-0_8"] }
tokio = { version = "0.2", features = ["full"] }
postgres-native-tls = "0.3.0"
native-tls = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_postgres = "0.2.0"
serde = "1.0.115"
futures = "0.3"


#[dependencies.postgres]
#version = "0.17.5"

#[dependencies.openssl]
#version = "0.10"
#
#[dependencies.postgres-openssl]
#version = "0.2.0-rc.1"

